// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array interpolation on root 1`] = `
Object {
  "input": Object {
    "raw": "[0]",
    "value": "Pikachu",
  },
  "output": "Pikachu",
  "pipes": Array [],
  "position": Object {
    "end": 9,
    "start": 0,
  },
  "raw": "{{ [0] }}",
  "type": "content",
}
`;

exports[`Array variable 1`] = `
Object {
  "input": Object {
    "raw": "pokemons[1].name",
    "value": "Eevee",
  },
  "output": "Eevee",
  "pipes": Array [],
  "position": Object {
    "end": 22,
    "start": 0,
  },
  "raw": "{{ pokemons[1].name }}",
  "type": "content",
}
`;

exports[`Default formatter - capitalize one word 1`] = `
Object {
  "input": Object {
    "raw": "name",
    "value": "anTOIne",
  },
  "output": "Antoine",
  "pipes": Array [
    Object {
      "output": "Antoine",
      "raw": "capitalize",
    },
  ],
  "position": Object {
    "end": 23,
    "start": 0,
  },
  "raw": "{{ name | capitalize }}",
  "type": "content",
}
`;

exports[`Default formatter - capitalize two words 1`] = `
Object {
  "input": Object {
    "raw": "name",
    "value": "anTOIne caRAT",
  },
  "output": "Antoine Carat",
  "pipes": Array [
    Object {
      "output": "Antoine Carat",
      "raw": "capitalize",
    },
  ],
  "position": Object {
    "end": 23,
    "start": 0,
  },
  "raw": "{{ name | capitalize }}",
  "type": "content",
}
`;

exports[`Default formatter - lowercase 1`] = `
Object {
  "input": Object {
    "raw": "name",
    "value": "Thibaud",
  },
  "output": "thibaud",
  "pipes": Array [
    Object {
      "output": "thibaud",
      "raw": "lowercase",
    },
  ],
  "position": Object {
    "end": 22,
    "start": 0,
  },
  "raw": "{{ name | lowercase }}",
  "type": "content",
}
`;

exports[`Default formatter - uppercase 1`] = `
Object {
  "input": Object {
    "raw": "name",
    "value": "Thibaud",
  },
  "output": "THIBAUD",
  "pipes": Array [
    Object {
      "output": "THIBAUD",
      "raw": "uppercase",
    },
  ],
  "position": Object {
    "end": 20,
    "start": 0,
  },
  "raw": "{{ name|uppercase }}",
  "type": "content",
}
`;

exports[`Multiple level variable 1`] = `
Object {
  "input": Object {
    "raw": "user.name.first",
    "value": "Thibaud",
  },
  "output": "Thibaud",
  "pipes": Array [],
  "position": Object {
    "end": 21,
    "start": 0,
  },
  "raw": "{{ user.name.first }}",
  "type": "content",
}
`;

exports[`One level variable 1`] = `
Object {
  "input": Object {
    "raw": "name",
    "value": "Thibaud",
  },
  "output": "Thibaud",
  "pipes": Array [],
  "position": Object {
    "end": 10,
    "start": 0,
  },
  "raw": "{{ name }}",
  "type": "content",
}
`;

exports[`Option formatters 1`] = `
Object {
  "input": Object {
    "raw": "name",
    "value": "Thibaud",
  },
  "output": "Smurf!",
  "pipes": Array [
    Object {
      "output": "Smurf!",
      "raw": "smurf",
    },
  ],
  "position": Object {
    "end": 18,
    "start": 0,
  },
  "raw": "{{ name | smurf }}",
  "type": "content",
}
`;

exports[`Option formatters awaiting for param 1`] = `
Object {
  "input": Object {
    "raw": "name",
    "value": "Thibaud",
  },
  "output": "Smurf!",
  "pipes": Array [
    Object {
      "output": "Smurf!",
      "raw": "smurf(true)",
    },
  ],
  "position": Object {
    "end": 24,
    "start": 0,
  },
  "raw": "{{ name | smurf(true) }}",
  "type": "content",
}
`;

exports[`Unknown formatter 1`] = `
Object {
  "input": Object {
    "raw": "name",
    "value": "Thibaud",
  },
  "output": "Thibaud",
  "pipes": Array [
    Object {
      "error": [Error: smurf is not defined.],
      "output": "Thibaud",
      "raw": "smurf",
    },
  ],
  "position": Object {
    "end": 18,
    "start": 0,
  },
  "raw": "{{ name | smurf }}",
  "type": "content",
}
`;

exports[`Unknown formatter in middle is ignored 1`] = `
Object {
  "input": Object {
    "raw": "name",
    "value": "Thibaud",
  },
  "output": "thibaud",
  "pipes": Array [
    Object {
      "error": [Error: smurf is not defined.],
      "output": "Thibaud",
      "raw": "smurf",
    },
    Object {
      "output": "thibaud",
      "raw": "lowercase",
    },
  ],
  "position": Object {
    "end": 30,
    "start": 0,
  },
  "raw": "{{ name | smurf | lowercase }}",
  "type": "content",
}
`;

exports[`Unknown variable - with empty string as fallback 1`] = `
Object {
  "input": Object {
    "error": [Error: user is undefined.],
    "raw": "user.name",
    "value": "",
  },
  "output": "",
  "pipes": Array [],
  "position": Object {
    "end": 15,
    "start": 0,
  },
  "raw": "{{ user.name }}",
  "type": "content",
}
`;

exports[`Unknown variable - with formatter 1`] = `
Object {
  "input": Object {
    "error": [Error: user is undefined.],
    "raw": "user.name",
    "value": "",
  },
  "output": "",
  "pipes": Array [
    Object {
      "output": "",
      "raw": "capitalize",
    },
  ],
  "position": Object {
    "end": 28,
    "start": 0,
  },
  "raw": "{{ user.name | capitalize }}",
  "type": "content",
}
`;

exports[`Unknown variable - with option fallback 1`] = `
Object {
  "input": Object {
    "error": [Error: user is undefined.],
    "raw": "user.name",
    "value": "Unknown",
  },
  "output": "Unknown",
  "pipes": Array [],
  "position": Object {
    "end": 15,
    "start": 0,
  },
  "raw": "{{ user.name }}",
  "type": "content",
}
`;

exports[`Unknown variable 1`] = `
Object {
  "input": Object {
    "error": [Error: user is undefined.],
    "raw": "user.name",
    "value": "",
  },
  "output": "",
  "pipes": Array [],
  "position": Object {
    "end": 15,
    "start": 0,
  },
  "raw": "{{ user.name }}",
  "type": "content",
}
`;
